# Red

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AABB.h  Build.bat  Build.sh  CMakeLists.txt  LICENSE  README.md  Red.cmake  Red.sln  appveyor.yml
Red/: CMakeLists.txt  Red.vcxproj  Red.vcxproj.filters
Red/Algorithm/: Algorithm.h  Distribute.h  GaussJordanEliminator.h
Red/Core/: Definitions.h  Platform.h
Red/Debug/: Debug.h  Process.h  ProcessBase.h  StackTrace.h  StackTraceBase.h
Red/Debug/Darwin/: DarwinProcess.cpp
Red/Debug/Linux/: LinuxProcess.cpp  LinuxStackTrace.cpp  LinuxStackTrace.h
Red/Debug/Windows/: WindowsProcess.cpp  WindowsProcess.h  WindowsStackTrace.cpp  WindowsStackTrace.h
Red/Function/: Function.h
Red/Hardware/: Hardware.cpp  Hardware.h
Red/Hardware/Darwin/: DarwinHardware.cpp  DarwinHardware.h
Red/Hardware/Linux/: LinuxHardware.cpp  LinuxHardware.h
Red/Hardware/Windows/: WindowsHardware.cpp  WindowsHardware.h
Red/Math/: AABB.h  BinaryOps.h  Box.h  Intersection.h  LineSegment.h  Math.h  MathCore.h  Matrix.h  MatrixOperations.h  OBB.h  Quaternion.h  Ray.h  Vector.h
Red/Network/: AsyncArgs.h  AsyncTask.cpp  AsyncTask.h  IP.h  IPv4.h  IPv6.h  NetUtils.h  Network.h  Socket.h  SocketBase.h  SocketDefs.h  SocketSubsystem.h  SocketSubsystemBase.h
Red/Network/BSD/: BSDSocket.cpp  BSDSocket.h  BSDSocketSubsystem.cpp  BSDSocketSubsystem.h
Red/Network/WinSock/: WSSocket.cpp  WSSocket.h  WSSocketSubsystem.cpp  WSSocketSubsystem.h
Red/System/: Shell.h  System.h
Red/Thread/: CriticalSection.h
Red/Thread/POSIX/: POSIXCriticalSection.cpp  POSIXCriticalSection.h
Red/Thread/Windows/: WindowsCriticalSection.cpp  WindowsCriticalSection.h
Red/UsageSamples/: Function_Sample.cpp  Sample_Function.cpp
Red/Window/: Window.h  WindowBase.h  WindowDescription.h  WindowState.h  WindowUtils.h
Red/Window/Windows/: WindowsWindow.cpp  WindowsWindow.h  WindowsWindowDescription.h  WindowsWindowState.h  WindowsWindowUtils.h
Test/: Test.vcxproj  Test.vcxproj.filters
Test/Algorithm/: Test_Distribute.cpp  Test_GaussJordanEliminator.cpp
Test/Function/: Test_Function.cpp
Test/Hardware/Linux/: Test_LinuxHardware.cpp
Test/Hardware/Windows/: Test_WindowsHardware.cpp
Test/Math/: Test_AABB.cpp  Test_BinaryOps.cpp  Test_Intersection.cpp  Test_LineSegment.cpp  Test_MathCore.cpp  Test_Matrix.cpp  Test_MatrixOperations.cpp  Test_OBB.cpp  Test_Quaternion.cpp  Test_Ray.cpp  Test_Vector.cpp
Test/Network/: Test_IPv4.cpp
Test/Network/BSD/: Test_BSDSocket.cpp  Test_BSDSocketSubsystem.cpp
Test/System/: Test_Shell.cpp
Test/Thread/POSIX/: Test_POSIXCriticalSection.cpp  Test_POSIXCriticalThread.cpp
Test/Thread/Windows/: Test_WindowsCriticalSection.cpp
Test/Window/Windows/: Test_WindowsWindow.cpp
